@@ -2772,10 +2772,10 @@ include everything listed under GenItem, plus a few more:</p>
     </tr>
     <tr>
       <td><em>Assigned Spells</em></td>
-      <td>List here the names of the spells which are cast upon
+      <td>List here the ID/names of the spells which are cast upon
 the eater of the pill or drinker of the potion. Check the list of
-spells for ones to use. Each potion and pill may only be used once,
-though an empty potion flask may be refilled with water if one likes.</td>
+spells for ones to use. Each spell is separated by semicolons, and
+may include optional parameters in parenthesis () after the ID.</td>
     </tr>
     <tr>
       <td><em>Nourishment/Eat</em></td>
